--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --font-rubic: "Rubik Glitch Pop", "sans-serif"; 
   --font-momo: "Momo Trust Display", "sans-serif"; 
   --color-newspaper-gray: #4B4B4B; 
+  --color-meijijingu-red: #B03E4A; 
+  --color-meijijingu-white: #E9DFD5; 
 }
 
 @utility vertical-lr {
